Heavily utilize NumericIndicator
- which has nice undervalued API
- this commit promotes all Indicator<Num> implementations to NumericIndicator childs
- we can do NumericIndicator.closePrice(xxx).macd(xxx).sma(xxx).lwma(xxx).macd(xxx)...
- concentrated static indicator factories inside NumericIndicator as starting point for every numeric calculation